# loot-control-api

./: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 1f79f8390a33_alter_date_transaction_to_timestamptz.py  a1b2c3d4e5f6_add_unique_constraint_to_tags.py  a5b6c1d2e3f4_add_transaction_date_index.py  a6b7c8d9e0f1_add_payment_methods.py  b2c3d4e5f6a1_add_tag_families.py  c1d2e3f4a5b6_move_type_from_categories_to_tags.py  c63d0ad71ed1_alter_timestamps_to_timestamptz.py  cfa05bb32377_criando_models.py  d2e3f4a5b6c1_cascade_deletes_and_unique_family_name.py  e3f4a5b6c1d2_add_role_to_users.py  f4a5b6c1d2e3_create_agent_schema.py
app/: main.py
app/bot/: agent.py  handler.py  llm.py  memory.py  prompt.py  setup.py  start_handler.py  state.py  telegram.py  tools.py
app/core/: config.py  database.py  security.py
app/jobs/: asset_prices.py  exchange_rates.py  historical_load.py  reports.py  scheduler.py
app/models/: __init__.py  user.py
app/models/agent/: memory.py  message.py
app/models/finance/: asset_price.py  category.py  exchange_rate.py  payment_method.py  tag.py  tag_family.py  transaction.py
app/repositories/: user_repository.py
app/repositories/finance/: category_repository.py  payment_method_repository.py  tag_family_repository.py  tag_repository.py  transaction_repository.py
app/routers/: admin.py  agent.py  bot.py  mini.py  users.py
app/schemas/: user.py
app/services/: user_service.py
tests/: conftest.py
tests/test_routers/: test_users.py
(+22 files in other folders)
